# Veez-pii-guard

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  go.mod
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: README.md
bench/cmd/run/: main.go
bench/dataset/: dataset.go
bench/results/: veez.json
cmd/pii-guard/: main.go  main_test.go
cmd/pii-guard-lsp/: main.go
docs/: ARCHITECTURE_DECISIONS.md
engine-rust/: Cargo.toml
engine-rust/src/: lib.rs
examples/basic/: main.go  main_test.go
examples/wasm-demo/: index.html
pii/: anonymizer.go  bench_test.go  coverage_test.go  detector.go  detector_test.go  engine.go  engine_purego.go  engine_rust.go  fuzz_test.go  mask.go  names.go  names_test.go  overlap.go  overlap_test.go  perf_threshold_test.go  plugins_test.go  property_test.go  rehydrate.go  rust.go  stream.go  stream_test.go  types.go  validate.go  validate_test.go
pii/context/: names.go  names_test.go
pii/context/data/: firstnames.txt
pii/patterns/: email.go  financial.go  gov_id.go  network.go  patterns.go  phone.go  refs.go  secrets.go
pii/plugins/eudriverlicense/: eudriverlicense.go  eudriverlicense_test.go
pii/plugins/frenchssn/: frenchssn.go  frenchssn_test.go
pii/plugins/siretsiren/: siretsiren.go  siretsiren_test.go
wasm/: main.go
