[package]
name = "veez-pii-engine"
version = "0.2.0"
edition = "2021"
description = "Optional Rust acceleration backend for veez-pii-guard. Drop-in via cgo + build tag `veezrust`."
license = "Apache-2.0"

[lib]
name = "veez_pii_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# We deliberately depend on `regex` (compiled, no_std-incompatible OK) and
# `serde_json` for the JSON wire format described in ADR-006.
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
